<resources>
    <string name="app_name">OrderingApp</string>

    /* Bread Data */

    <string name="sub15" translatable="false">SUB15</string>
    <string name="sub30" translatable="false">SUB30</string>
    <string name="wrap" translatable="false">WRAP</string>
    <string name="salad" translatable="false">Sałatka</string>
    <string name="zr_b_nsandwich">Zrób \nSandwich</string>
    <string name="tempPrice">0.00 PLN</string>
    <string name="paid_add_ons">PLATNE DODATKI</string>
    <string name="bread">BREAD</string>
    <string name="choose_sub">WYBIERZ SUB</string>
    <string name="vegetables">WARZYWA</string>
    <string name="remove_item_by_one">remove item by one</string>
    <string name="zero_pln">0.00 PLN</string>
    <string name="zero">0</string>
    <string name="final_price">Cena Koncowa</string>
    <string name="sauces">SAUCES</string>
    <string name="order_total">Order Total</string>
    <string name="dummyPrice">1000 PLN</string>
    <string name="cancel">Cancel</string>
    <string name="place_order">Place Order</string>
    <string name="name">Name:</string>
    <string name="surname">Surname</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="street">Street</string>
    <string name="home_number">Home Number</string>
    <string name="city">City</string>
    <string name="e_mail">E-mail</string>
    <string name="log_in_information">Log-In Information</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>

    <string name="DRAWER_OPEN">DRAWER_HAS_BEEN_OPENED</string>
    <string name="DRAWER_CLOSE">DRAWER_HAS_BEEN_CLOSED</string>
    <string name="edit_data">Edit Data</string>
    <string name="total_bill_payment">Total Bill Payment:</string>
    <string name="confirm">Confirm</string>
    <string name="number">number</string>
    <string name="next">Next</string>
    <string name="add_catering_item_button">add catering item button</string>
    <string name="sandwich">sandwich</string>
    <string name="hot_drinks">Hot Drinks</string>
    <string name="soft_drinks">Soft Drinks</string>
    <string name="water">Water</string>
    <string name="currency">PLN</string>
    <string name="add_to_order">Add to Order</string>
    <string name="total_drinks_value">Total Drinks Value:</string>
    <string name="polish_currency_pln">PLN</string>

</resources>
