<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ejoapps.m2d2_sub.orderingapp.CreateAccountActivity">

    <TextView
        android:id="@+id/ca_user_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ca_user_name_input"
        app:layout_constraintBottom_toBottomOf="@+id/ca_user_name_input"/>

    <EditText
        android:id="@+id/ca_user_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ca_user_name_label"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/ca_user_surname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_name_label"
        app:layout_constraintTop_toTopOf="@+id/ca_user_surname_input"
        app:layout_constraintBottom_toBottomOf="@+id/ca_user_surname_input"/>

    <EditText
        android:id="@+id/ca_user_surname_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="8"
        app:layout_constraintRight_toRightOf="@+id/ca_user_name_input"
        app:layout_constraintTop_toBottomOf="@+id/ca_user_name_input"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_name_input"/>

    <TextView
        android:id="@+id/ca_user_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_phone"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_surname_label"
        app:layout_constraintTop_toTopOf="@+id/ca_user_phone_input"
        app:layout_constraintBottom_toBottomOf="@+id/ca_user_phone_input"/>

    <EditText
        android:id="@+id/ca_user_phone_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="8"
        app:layout_constraintRight_toRightOf="@+id/ca_user_surname_input"
        app:layout_constraintTop_toBottomOf="@+id/ca_user_surname_input"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_surname_input"/>

    <TextView
        android:id="@+id/ca_user_delivery_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ca_user_phone_input"/>

    <TextView
        android:id="@+id/ca_user_street_delivery_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_phone_label"
        app:layout_constraintBottom_toBottomOf="@+id/ca_user_street_delivery_input"
        app:layout_constraintTop_toTopOf="@+id/ca_user_street_delivery_input"/>

    <EditText
        android:id="@+id/ca_user_street_delivery_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="8"
        app:layout_constraintRight_toRightOf="@+id/ca_user_phone_input"
        app:layout_constraintTop_toBottomOf="@+id/ca_user_delivery_address_label"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_phone_input"/>

    <TextView
        android:id="@+id/ca_user_home_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_number"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_street_delivery_label"
        app:layout_constraintBottom_toBottomOf="@+id/ca_user_home_number_input"
        app:layout_constraintTop_toTopOf="@+id/ca_user_home_number_input"/>

    <EditText
        android:id="@+id/ca_user_home_number_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="8"
        app:layout_constraintRight_toRightOf="@+id/ca_user_phone_input"
        app:layout_constraintTop_toBottomOf="@+id/ca_user_street_delivery_input"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_phone_input"/>

    <TextView
        android:id="@+id/ca_user_city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_home_number_label"
        app:layout_constraintBottom_toBottomOf="@+id/ca_user_city_input"
        app:layout_constraintTop_toTopOf="@+id/ca_user_city_input"/>

    <EditText
        android:id="@+id/ca_user_city_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        app:layout_constraintRight_toRightOf="@+id/ca_user_phone_input"
        app:layout_constraintTop_toBottomOf="@+id/ca_user_home_number_input"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_phone_input"/>

    <TextView
        android:id="@+id/ca_user_log_in_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_information"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ca_user_city_input"/>

    <TextView
        android:id="@+id/ca_e_mail_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_city_label"
        app:layout_constraintBottom_toBottomOf="@+id/ca_e_mail_input"
        app:layout_constraintTop_toTopOf="@+id/ca_e_mail_input"/>

    <EditText
        android:id="@+id/ca_e_mail_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="textEmailSubject"
        app:layout_constraintRight_toRightOf="@+id/ca_user_phone_input"
        app:layout_constraintTop_toBottomOf="@+id/ca_user_log_in_info_label"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_phone_input"/>

    <TextView
        android:id="@+id/ca_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_city_label"
        app:layout_constraintBottom_toBottomOf="@+id/ca_password_input"
        app:layout_constraintTop_toTopOf="@+id/ca_password_input"/>

    <EditText
        android:id="@+id/ca_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="textVisiblePassword"
        app:layout_constraintRight_toRightOf="@+id/ca_user_phone_input"
        app:layout_constraintTop_toBottomOf="@+id/ca_e_mail_input"
        app:layout_constraintLeft_toLeftOf="@+id/ca_user_phone_input"/>

    <LinearLayout
        android:id="@+id/ca_button_holder"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="?android:buttonBarStyle">

        <Button
            android:id="@+id/cancel_ca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/create_ca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
