<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ejoapps.m2d2_sub.orderingapp.OrderAddressAndFinalConfirmationActivity">

    <TextView
        android:id="@+id/oa_tv_total_order_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_bill_payment"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oa_tv_total_order_price_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/zero_pln"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/oa_tv_total_order_price_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/oa_tv_total_order_price_label" />

    <TextView
        android:id="@+id/oa_tv_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mobile_phone"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/oa_tv_total_order_price_label"
        app:layout_constraintTop_toBottomOf="@+id/oa_tv_total_order_price_label" />

    <TextView
        android:id="@+id/oa_tv_phone_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/oa_tv_phone_label"
        app:layout_constraintLeft_toLeftOf="@+id/oa_tv_delivery_address_city_output"
        app:layout_constraintTop_toTopOf="@+id/oa_tv_phone_label"
        tools:text="@string/mobile_phone" />

    <TextView
        android:id="@+id/oa_tv_delivery_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delivery_address"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/oa_tv_phone_label"
        app:layout_constraintTop_toBottomOf="@+id/oa_tv_phone_label" />

    <Spinner
        android:id="@+id/oa_spinner_delivery_address_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/oa_tv_delivery_address_label"
        app:layout_constraintLeft_toRightOf="@+id/oa_tv_total_order_price_label"
        app:layout_constraintTop_toTopOf="@+id/oa_tv_delivery_address_label" />

    <TextView
        android:id="@+id/oa_tv_delivery_address_street_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/oa_spinner_delivery_address_picker"
        app:layout_constraintTop_toBottomOf="@+id/oa_spinner_delivery_address_picker"
        tools:text="@string/delivery_address" />

    <EditText
        android:id="@+id/oa_et_delivery_address_street_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:ems="8"
        android:hint="@string/street"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/oa_spinner_delivery_address_picker"
        app:layout_constraintTop_toBottomOf="@+id/oa_spinner_delivery_address_picker" />

    <TextView
        android:id="@+id/oa_tv_delivery_address_number_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/oa_tv_total_order_price_label"
        app:layout_constraintTop_toBottomOf="@+id/oa_tv_delivery_address_street_output"
        tools:text="@string/delivery_address" />

    <EditText
        android:id="@+id/oa_et_delivery_address_number_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/number"
        android:ems="8"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@+id/oa_tv_total_order_price_label"
        app:layout_constraintTop_toBottomOf="@+id/oa_et_delivery_address_street_input"/>

    <TextView
        android:id="@+id/oa_tv_delivery_address_city_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/oa_tv_total_order_price_label"
        app:layout_constraintTop_toBottomOf="@+id/oa_tv_delivery_address_number_output"
        tools:text="@string/delivery_address" />

    <EditText
        android:id="@+id/oa_et_delivery_address_city_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:ems="8"
        android:hint="@string/city"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@+id/oa_tv_total_order_price_label"
        app:layout_constraintTop_toBottomOf="@+id/oa_et_delivery_address_number_input"/>

    <LinearLayout
        android:id="@+id/oa_linear_button_holder"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/oa_btn_cancel_order"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/oa_btn_confirm_order"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
