<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/drinks_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/drinks_ll_text_holder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.ejoapps.m2d2_sub.orderingapp.DrinksPickerActivity">

            <TextView
                android:id="@+id/drinks_hot_drinks_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/hot_drinks"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/drinks_hot_drinks_recView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/drinks_hot_drinks_label"
                app:layout_constraintRight_toRightOf="@+id/drinks_hot_drinks_label"
                app:layout_constraintTop_toBottomOf="@+id/drinks_hot_drinks_label" />


            <TextView
                android:id="@+id/drinks_soft_drinks_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/soft_drinks"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@+id/drinks_hot_drinks_recView"
                app:layout_constraintRight_toRightOf="@+id/drinks_hot_drinks_recView"
                app:layout_constraintTop_toBottomOf="@+id/drinks_hot_drinks_recView" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/drinks_soft_drinks_recView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/drinks_soft_drinks_label"
                app:layout_constraintRight_toRightOf="@+id/drinks_soft_drinks_label"
                app:layout_constraintTop_toBottomOf="@+id/drinks_soft_drinks_label" />

            <TextView
                android:id="@+id/drinks_water_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/water"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@+id/drinks_soft_drinks_recView"
                app:layout_constraintRight_toRightOf="@+id/drinks_soft_drinks_recView"
                app:layout_constraintTop_toBottomOf="@+id/drinks_soft_drinks_recView" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/drinks_water_recView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/drinks_water_label"
                app:layout_constraintRight_toRightOf="@+id/drinks_water_label"
                app:layout_constraintTop_toBottomOf="@+id/drinks_water_label" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/drinks_ll_text_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/drinks_ll_buttons_holder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/drinks_label_total_drinks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_weight="3"
            android:text="@string/total_drinks_value"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/drinks_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/zero"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/drinks_price_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/polish_currency_pln"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drinks_ll_buttons_holder"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/drinks_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/drinks_add_to_order"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_order" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>