<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ejoapps.m2d2_sub.orderingapp.OrderSummaryActivity">

    <LinearLayout
        android:id="@+id/scrollViewOrderSummary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/orderTotalValuesHolder"
        android:layout_marginBottom="8dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/finalOrderRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/finalOrderDrinksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/orderTotalValuesHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/orderBtnsHolder"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewOrderSummary">
        <TextView
            android:id="@+id/orderTotalSumLabel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/order_total"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/orderTotalSumTotalMoney"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="center"
            android:text="@string/dummyPrice"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/orderBtnsHolder"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="?android:buttonBarStyle"
        app:layout_constraintTop_toBottomOf="@+id/orderTotalValuesHolder">
        <Button
            android:id="@+id/order_btn_cancel_order"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/order_btn_placeAnOrder"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/place_order"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
